--- a/config/scaffolding/SIQA_2304_AWSSTAGEProject.yml
+++ b/config/scaffolding/SIQA_2304_AWSSTAGEProject.yml
@@ -7,3 +7,12 @@ packages:
   gitUrl: https://github.com/Karthik-V-IBM-10
   gitUsername: Karthik-V-IBM-10
   gitBranch: main
+services:
+- serviceName: project.siqa_2304_awsstage.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:DBInsert
+  packages:
+  - name: SIQA_2304_AWSSTAGEProject
+    version: "1.0"
+- serviceName: project.siqa_2304_awsstage.integrations:SIQAAdapterFlow
+  packages:
+  - name: SIQA_2304_AWSSTAGEProject
+    version: "1.0"
