--- a/config/scaffolding/SIQA_2304_AWSSTAGEProject.yml
+++ b/config/scaffolding/SIQA_2304_AWSSTAGEProject.yml
@@ -34,6 +34,11 @@ packages:
   gitUrl: https://github.com/manoj-jannu-IBM
   gitUsername: Karthik-V-IBM-10
   gitBranch: main
+- name: SIQAJDBCAdapterTests
+  gitServerName: kvv
+  gitUrl: https://github.com/manoj-jannu-IBM
+  gitUsername: Karthik-V-IBM-10
+  gitBranch: main
 services:
 - serviceName: project.siqa_2304_awsstage.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections:Database_1
   packages:
